--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,23 @@
 subprojects {
-    apply plugin: 'java'
-    group = 'org.jskat'
-    version = '0.14.0-SNAPSHOT'
-	
-	repositories {
-		mavenCentral()
+	apply plugin: 'java'
+	group = 'org.jskat'
+	version = '0.14.0-SNAPSHOT'
+
+	repositories { mavenCentral() }
+
+	task sourcesJar(type: Jar, dependsOn: classes) {
+		classifier = 'sources'
+		from sourceSets.main.allSource
+	}
+
+	task javadocJar(type: Jar, dependsOn: javadoc) {
+		classifier = 'javadoc'
+		from javadoc.destinationDir
+	}
+
+	artifacts {
+		archives sourcesJar
+		archives javadocJar
 	}
 }
 
@@ -15,9 +28,9 @@ project (':jskat-base') {
 		compile 'org.slf4j:slf4j-parent:1.7.6'
 		compile 'org.slf4j:log4j-over-slf4j:1.7.6'
 		compile 'org.eclipse.jetty:jetty-websocket:8.1.14.v20131031'
-		
+
 		compile 'org.encog:encog-core:3.2.0'
-		
+
 		testCompile 'junit:junit:4.11'
 		testCompile 'org.mockito:mockito-core:1.9.5'
 	}
@@ -26,22 +39,22 @@ project (':jskat-base') {
 project(':jskat-swing-gui') {
 	dependencies {
 		compile project(':jskat-base')
-		
+
 		compile 'com.miglayout:miglayout-swing:4.2'
 	}
-	
+
 	jar {
-		from { 
-			configurations.compile.collect { 
-				it.isDirectory() ? it : zipTree(it) 
+		from {
+			configurations.compile.collect {
+				it.isDirectory() ? it : zipTree(it)
 			}
 		}
 		manifest {
 			attributes(
-				'Implementation-Title': 'JSkat', 
-				'Implementation-Version': version, 
-				'Main-Class': 'org.jskat.JSkat',
-				'SplashScreen-Image' : 'org/jskat/gui/img/gui/splash.png')
+					'Implementation-Title': 'JSkat',
+					'Implementation-Version': version,
+					'Main-Class': 'org.jskat.JSkat',
+					'SplashScreen-Image' : 'org/jskat/gui/img/gui/splash.png')
 		}
 	}
 }
